k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contoso-retail
  namespace: contoso-retail
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: contoso-retail-api
                port:
                  number: 3001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: contoso-retail-web
                port:
                  number: 80
